- modified sites and trusts to not have relationships, added sites and trusts data, made relevant columns unique

--- a/src/main/webapp/i18n/en/site.json
+++ b/src/main/webapp/i18n/en/site.json
@@ -16,14 +16,14 @@
 		"title": "Site"
 	  },
 	  "siteCode": "Site Code",
+	  "localOffice": "Local Office",
+	  "trustCode": "Trust Code",
 	  "siteName": "Site Name",
 	  "address": "Address",
 	  "postCode": "Post Code",
 	  "siteKnownAs": "Site Known As",
 	  "siteNumber": "Site Number",
-	  "organisationalUnit": "Organisational Unit",
-	  "localOffice": "Local Office",
-	  "trustCode": "Trust Code"
+	  "organisationalUnit": "Organisational Unit"
 	}
   }
 }
