- ported grades, sites, trusts and DBC's server site functionality from the reference service 1.0

--- a/src/main/webapp/i18n/en/dbc.json
+++ b/src/main/webapp/i18n/en/dbc.json
@@ -1,8 +1,8 @@
 {
   "referenceApp": {
-	"dBC": {
+	"dbc": {
 	  "home": {
-		"title": "DBCS",
+		"title": "Designated Body Codes",
 		"createLabel": "Create a new DBC",
 		"createOrEditLabel": "Create or edit a DBC"
 	  },
@@ -13,9 +13,9 @@
 		"question": "Are you sure you want to delete DBC {{ id }}?"
 	  },
 	  "detail": {
-		"title": "DBC"
+		"title": "Designated Body Code"
 	  },
-	  "dbc": "Dbc",
+	  "dbc": "dbc",
 	  "name": "Name",
 	  "abbr": "Abbr"
 	}
